@@ -1,0 +1,12 @@
+/**
+ * Author: ZhangChunsheng
+ * Date: 2013-10-18
+ * Description: consts
+ */
+module.exports = {
+    COMMAND: {
+        roleTest: {
+            testGetMainPlayerCommand: "testGetMainPlayerCommand"
+        }
+    }
+}
