@@ -1,0 +1,6 @@
+/**
+ * Author: ZhangChunsheng
+ * Date: 2013-10-18
+ * Description: fileHelper
+ */
+var fileHelper = module.exports;
