@@ -1,0 +1,13 @@
+/**
+ * Author: ZhangChunsheng
+ * Date: 2013-10-18
+ * Description: auth
+ */
+var auth = module.exports;
+
+/**
+ * 认证并保存cookie
+ */
+auth.auth = function() {
+
+}
