@@ -1,0 +1,10 @@
+/**
+ * Author: ZhangChunsheng
+ * Date: 2013-10-18
+ * Description: role
+ */
+var role = module.exports;
+
+role.createMainPlayer = function() {
+
+}
