@@ -1,0 +1,13 @@
+/**
+ * Author: ZhangChunsheng
+ * Date: 2013-10-18
+ * Description: user
+ */
+var user = module.exports;
+
+/**
+ * 注册并保存用户信息
+ */
+user.autoRegister = function() {
+
+}
