@@ -4,6 +4,9 @@
 [seaking_serverTest_1.0.0.1 2013-10-17 张春生]
 1、新功能：增加ab测试
 
+[seaking_serverTest_1.0.0.1 2013-10-18 张春生]
+1、新功能：增加自动注册和认证功能
+
 --备注分类
 1、新功能：
 2、Bug:
